Fixed code readability things

--- a/style.css
+++ b/style.css
@@ -16,6 +16,25 @@ body {
   visibility: hidden;
 }
 
+iframe {
+  display: block;
+  width: 100%;
+  height: 100%;
+  border: 0 ;
+}
+
+h1 {
+  font-size: 60px;
+}
+
+h2 {
+  font-size: 40px;
+}
+
+h3 {
+  font-size: 35px;
+}
+
 .header {
   padding: 10px;
   z-index: 100;
@@ -28,17 +47,11 @@ body {
 
 .linkheader {
   background: #a00;
-  z-index: 200;
+  z-index: 1;
   padding: 0px;
   text-align: center;
   overflow: hidden;
-}
-
-h1 {
-  font-size: 60px;
-}
-h2 {
-  font-size: 40px;
+  position: relative;
 }
 
 .linkheader a {
@@ -57,6 +70,14 @@ h2 {
 
 .linkheader a:hover {
   background: #700;
+}
+
+.lineheader {
+  background: #a00;
+  z-index: 1;
+  padding: 0px;
+  height: 4px;
+  position: relative;
 }
 
 .docheader {
@@ -107,22 +128,6 @@ h2 {
   background: #777777;
 }
 
-iframe {
-  border: 0 ;
-  width: 100%;
-  height: 100%;
-}
-
-.viewer {
-  padding: 0px;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 220px;
-  outline: none;
-  z-index: 1;
-}
-
 .nav1 a {
   float: left;
   display: block;
@@ -139,61 +144,19 @@ iframe {
   color: #cccccc
 }
 
-.homebutton {
-  padding: 0px;
-  position: absolute;
-  left: 0px;
-  top: 0px;
-}
-
-.homebutton a {
-  float: left;
-  display: block;
-  padding: 10px;
-
-  text-align: center;
-  text-decoration: none;
-  font-size: 20px;
-
-  transition: background 0.5s;
-
-  color: #cccccc;
-}
-
-.homebutton a:hover {
-  background: #ffffff55;
-}
-
 .nav1 a:hover{
   background: #999999;
   border-bottom: 5px solid #700;
 }
 
-iframe {
-  display: block;
-  /*border: none;*/
+.viewer {
+  padding: 0px;
   width: 100%;
-  height: 1024px;
-}
-
-@keyframes slidein {
-  0% {
-    top: -65px;
-  }
-
-  100% {
-    top: 0px;
-  }
-}
-
-@keyframes slideout {
-  0% {
-    top: 0px;
-  }
-
-  100% {
-    top: -65px;
-  }
+  height: 100%;
+  position: absolute;
+  top: 220px;
+  outline: none;
+  z-index: 1;
 }
 
 @keyframes fadein {
@@ -216,9 +179,29 @@ iframe {
   }
 }
 
+@keyframes slidein {
+  0% {
+    top: -65px;
+  }
+
+  100% {
+    top: 0px;
+  }
+}
+
+@keyframes slideout {
+  0% {
+    top: 0px;
+  }
+
+  100% {
+    top: -65px;
+  }
+}
+
 @keyframes slideinicons {
   0% {
-    top: -136px;
+    top: -132px;
   }
 
   100% {
@@ -232,6 +215,6 @@ iframe {
   }
 
   100% {
-    top: -136px;
+    top: -132px;
   }
 }
